# backend/internal/interfaces/http/dto/user_dto.go
@@ -21,6 +21,7 @@ type UpdateUserRequest struct {
 type ChangePasswordRequest struct {
 	CurrentPassword string `json:"current_password" validate:"required"`
 	NewPassword     string `json:"new_password" validate:"required,password"`
+	ConfirmPassword string `json:"confirm_password" validate:"required,eqfield=NewPassword"`
 }
 
 type BanUserRequest struct {
